<resources>
    <string name="app_name">MEST Eccomerce</string>
    <string name="enter_email_address">Enter Your Email Address</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="or">or login with</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="login">Login to become a member</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_feed_title"></string>
    <string name="home_feed_img_attribute"></string>
</resources>