<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberRegistration">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/designer_img"
            android:src="@drawable/designer"
            android:scaleType="centerCrop"
            android:layout_marginTop="24dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/login_title"
            android:text="Login"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/designer_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/person_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            android:minWidth="340dp"
            android:layout_margin="16dp"
            app:hintEnabled="true"
            app:endIconDrawable="@drawable/ic_baseline_person_24"
            app:endIconMode="custom"
            app:endIconTint="@color/light_blue"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            android:elevation="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_enter_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your full name"
                android:inputType="textPersonName"
                android:background="@color/light_blue_bg">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_name"
            android:minWidth="340dp"
            android:layout_margin="16dp"
            app:hintEnabled="true"
            app:endIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconMode="custom"
            app:endIconTint="@color/light_blue"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            android:elevation="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_enter_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your email address"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/light_blue_bg"
                app:boxStrokeColor="@color/light_blue">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address"
            android:minWidth="340dp"
            android:layout_margin="16dp"
            app:hintEnabled="true"
            app:endIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
            app:endIconMode="custom"
            app:endIconTint="@color/light_blue"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            android:elevation="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:background="@color/light_blue_bg">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/or"
            android:textColor="@color/divider_color"
            android:layout_margin="@dimen/margin_sm"
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_password"/>

        <View
            android:background="@color/divider_color"
            android:layout_marginStart="@dimen/margin_md"
            android:layout_marginEnd="@dimen/margin_sm"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or"/>

        <View
            android:background="@color/divider_color"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_marginEnd="@dimen/margin_md"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or"/>

        <include
            android:id="@+id/social_media_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/social_media_banner"
            app:layout_constraintTop_toBottomOf="@+id/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/login_button"
            style="@style/SecondaryButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/social_media_banner"
            android:text="@string/login"
            android:layout_margin="@dimen/margin_xs">
        </Button>

        <Button
            android:id="@+id/forgot_password_button"
            style="@style/TertiaryButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:text="@string/sign_up"
            android:layout_margin="@dimen/margin_xs"
            android:backgroundTint="@color/white"
            android:textColor="@color/primary_color"
            android:elevation="0dp">
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>